@@ -1,6 +1,6 @@
 ################################################################################
 #    Creme is a free/open-source Customer Relationship Management software
-#    Copyright (C) 2009-2024  Hybird
+#    Copyright (C) 2009-2025  Hybird
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU Affero General Public License as published by
@@ -43,3 +43,6 @@ class Restrict2SuperusersButton(Button):
         context['UUID_SANDBOX_SUPERUSERS'] = UUID_SANDBOX_SUPERUSERS
 
         return context
+
+    def is_displayed(self, *, entity, request):
+        return request.user.is_superuser
