@@ -3,7 +3,7 @@ Developer's notebook for Creme modules
 ======================================
 
 :Author: Guillaume Englert
-:Version: 06/10/2025 for Creme 2.8
+:Version: 07/10/2025 for Creme 2.8
 :Copyright: Hybird
 :License: GNU FREE DOCUMENTATION LICENSE version 1.3
 :Errata: Hugo Smett, Patix, Morgane Alonso
@@ -1678,7 +1678,7 @@ it's a convention): ::
         def get_ctypes(self):
             return (Beaver,)
 
-        def ok_4_display(self, entity):
+        def is_displayed(self, *, entity, request):
             return (str(entity.status.uuid) == UUID_STATUS_SICK)
 
         # def get_context(self, *, entity, request):
